@@ -3,5 +3,5 @@
 universal=1
 
 [metadata]
-description-file = README.md
+description_file = README.md
 
