@@ -355,3 +355,4 @@
  03-Apr-2024  V1.717 Add int_list cifType to DataTypeApplicationInfo
  09-Apr-2024  V1.718 Update RepoLoadExec CLI and RepoLoadWorkflow to support CLI usage from weekly-update workflow
   6-May-2024  V1.719 Updates to CLI utilities
+  9-May-2024  V1.720 Adjust provider type exclusion input to accept a list of types; update setuptools config
